@@ -7,3 +7,5 @@ Changes since release 0.3.9:
      Settings::instance().evaluationDate() = date;
      registerWith(Settings::instance().evaluationDate());
 
+- Added risk premium to Vasicek model (thanks to Aurelien Chanudet.)
+
